// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"data" can be used to specify resource data 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "data": Object {
      "boom": 123,
    },
    "kind": "ResourceType",
    "metadata": Object {
      "name": "test-c8c5facf",
    },
  },
]
`;

exports[`"spec" is synthesized as-is 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "ResourceType",
    "metadata": Object {
      "name": "test-c8c5facf",
    },
    "spec": Object {
      "prop1": "hello",
      "prop2": Object {
        "world": 123,
      },
    },
  },
]
`;

exports[`if name is explicitly specified it will be respected 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "MyResource",
    "metadata": Object {
      "name": "boom",
    },
  },
]
`;

exports[`minimal configuration 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "MyResource",
    "metadata": Object {
      "name": "test-my-c8487bf7",
    },
  },
]
`;

exports[`printed yaml is alphabetical 1`] = `
"[
  {
    \\"apiVersion\\": \\"v1\\",
    \\"kind\\": \\"MyResource\\",
    \\"metadata\\": {
      \\"meta\\": {
        \\"aaa\\": 123,
        \\"zzz\\": \\"hello\\"
      },
      \\"name\\": \\"test-my-c8487bf7\\"
    },
    \\"spec\\": {
      \\"firstProperty\\": \\"hello\\",
      \\"secondProperty\\": {
        \\"beforeThirdProperty\\": \\"world\\",
        \\"innerThirdProperty\\": \\"!\\"
      }
    }
  }
]"
`;

exports[`synthesized resource name is based on path 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "MyResource",
    "metadata": Object {
      "name": "test-my-c8487bf7",
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "MyResource",
    "metadata": Object {
      "name": "test-scope-my-c8fafaf7",
    },
  },
]
`;
